k8s/podtestnew.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: podtestnew
  name: podtestnew
  namespace: default
spec:
  containers:
  - image: nginx:latest
    name: podtestnew
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
