k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  selector:
    app: python-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 30080
  type: NodePort
